[FIX] horizontal scroll

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -25,7 +25,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width:93%;
   padding: 30px 60px;
 }
 
